# groot

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: gamesettings.h
src/: Makefile  TODO.md  main.cpp
